--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,1 +1,2 @@
-<p>"userId": {{post.userId}} <br> "id": {{post.id}} <br> "title": {{post.title}} <br> "body": {{post.body}}</p>
+<div>"userId": {{post.userId}} <br> "id": {{post.id}} <br> "title": {{post.title}} <br> "body": {{post.body}}</div>
+<app-comments [id]="post.id"></app-comments>
