--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,7 +1,6 @@
 <p>
-  "postId":{{comment.postId}}<br>
-  "id":{{comment.id}}<br>
-  "name":{{comment.name}}<br>
-  "email":{{comment.email}}<br>
-  "body":{{comment.body}}
-</p>
+   "id":{{comment.id}}<br>
+  "name":{{comment.name}}
+  <button (click)="goToDetails()">details</button>
+  </p>
+
