--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,3 @@
-<p>"userId": {{post.userId}} <br> "id": {{post.id}} <br> "title": {{post.title}} <br> "body": {{post.body}}</p>
-<p>"coments to post"</p>
-<app-comments [id]="post.id"></app-comments>
+<p>"id": {{post.id}} <br> "title": {{post.title}} <br> </p>
+<a [routerLink] = "[post.id]">post details</a>
+
