Lesson2-route, resolve, state

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,5 @@
-<p>"id": {{post.id}} <br> "title": {{post.title}} <br> </p>
-<a [routerLink] = "[post.id]">post details</a>
+<div>"id": {{post.id}} <br> "title": {{post.title}}
+  <button (click)="goToDetails()">details</button>
+</div>
+
 
