--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,15 @@
-div{
+div {
+  margin: 0;
   height: 50px;
   text-align: center;
   background: blue;
 
 }
+
+button {
+
+  margin-left: 70px;
+  margin-top: 15px;
+}
+
 
