--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
-  <button [routerLink] ="['users']">users</button> <button [routerLink] ="['posts']">posts</button> <button [routerLink] ="['comments']">comments</button>
+  <button [routerLink]="['users']">users</button>
+  <button [routerLink]="['posts']">posts</button>
+  <button [routerLink]="['comments']">comments</button>
 </div>
 <router-outlet></router-outlet>
 
