Lesson2-route, resolve, state

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,6 +1,6 @@
-<p>
+<div>
   "id":{{comment.id}}<br>
   "name":{{comment.name}}
   <button (click)="goToDetails()">details</button>
-</p>
+</div>
 
