--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,2 +1,8 @@
-<app-comment [comment]='comment' *ngFor="let comment of comments"></app-comment>
-
+<div class="wrap">
+  <div class="comments">
+    <app-comment [comment]='comment' *ngFor="let comment of comments"></app-comment>
+  </div>
+  <div class="detail">
+    <router-outlet></router-outlet>
+  </div>
+</div>
