--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,1 +1,8 @@
-<app-post [post]='post' *ngFor="let post of posts"></app-post>
+<div class="wrap">
+  <div class="posts">
+    <app-post [post]='post' *ngFor="let post of posts"></app-post>
+  </div>
+  <div class="detail">
+    <router-outlet></router-outlet>
+  </div>
+</div>
