--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,5 +1,12 @@
-<router-outlet></router-outlet>
-<app-user [user]='user' *ngFor="let user of users" ></app-user>
+<div class="wrap">
+  <div class="users">
+    <app-user [user]='user' *ngFor="let user of users"></app-user>
+  </div>
+  <div class="detail">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
 
 
 
